etfController test - test passes. clean state, dont mess this up